--- a/frontend/src/app/administrator/admin-department/admin-department.component.html
+++ b/frontend/src/app/administrator/admin-department/admin-department.component.html
@@ -19,3 +19,30 @@
   <br>
   <br>
 </div>
+<hr>
+<div class="container">
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>Department Name</th>
+          <th>Action</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let department of departments">
+          <td>{{department.departmentName}}</td>
+          <td>
+            <a routerLink="/units" style="color:blue;">Edit</a>
+          </td>
+          <td>
+            <a (click)='deleteDepartment(department.departmentId)' type="button" style="color: red" aria-label="Left Align">
+   
+              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+               
+            </a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
