--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,7 +11,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a style="color: white" class="navbar-brand" routerLink="/dashboard">Computing & Informatics Net Promoter Score</a>
+        <a style="color: white" class="navbar-brand">|Computing & Informatics Net Promoter Score|</a>
       </div>
   
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,6 +19,8 @@
         <ul class="nav navbar-nav">
         </ul>
         <ul class="nav navbar-nav navbar-right">
+          <li><a style="color: white" routerLink="/dashboard">Admin</a></li>
+          <li><a style="color: white" routerLink="/graphs">Graphs</a></li>
           <li><a style="color: white" (click)="onLogout()">Logout</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
