--- a/frontend/src/app/department/department.component.html
+++ b/frontend/src/app/department/department.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="input-group" style="margin-left: 1em">      
-      <select id="exampleFormControlSelect1" #location>
+      <select id="exampleFormControlSelect1" #department>
         <option selected disabled>Select Department</option>
-        <option *ngFor="let location of locationArray">{{ location.name }}</option>
+        <option *ngFor="let department of departmentArray">{{ department.departmentName }}</option>
       </select>
       <span>
-        <button type="button" (click)="onSave(location.value)" class="btn btn-md">Save</button>
+        <button type="button" (click)="onSave(department.value)" class="btn btn-md">Next</button>
       </span>
     </div>
   </div>
