--- a/frontend/src/app/unit/unit.component.html
+++ b/frontend/src/app/unit/unit.component.html
@@ -1,3 +1,13 @@
-<p>
-  unit works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="input-group" style="margin-left: 1em">      
+      <select id="exampleFormControlSelect1" #unit>
+        <option selected disabled>Select Unit</option>
+        <option *ngFor="let unit of unitArray">{{ unit.unitName }}</option>
+      </select>
+      <span>
+        <button type="button" (click)="onSave(unit.value)" class="btn btn-md">Save</button>
+      </span>
+    </div>
+  </div>
+</div>
