--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -19,8 +19,8 @@
         <ul class="nav navbar-nav">
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a style="color: white" routerLink="/dashboard">Admin</a></li>
-          <li><a style="color: white" routerLink="/graphs">Graphs</a></li>
+          <li><a style="color: white" routerLink="/admin">admin</a></li>
+          <li><a style="color: white" routerLink="/school">Graphs</a></li>
           <li><a style="color: white" (click)="onLogout()">Logout</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
