--- a/frontend/src/app/administrator/admin-department/admin-department.component.html
+++ b/frontend/src/app/administrator/admin-department/admin-department.component.html
@@ -24,6 +24,7 @@
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
+          <th>ID</th>
           <th>Department Name</th>
           <th>Action</th>
           <th>Action</th>
@@ -31,6 +32,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let department of departments">
+          <td>{{department.departmentId}}</td>
           <td>{{department.departmentName}}</td>
           <td>
             <a routerLink="/units" style="color:blue;">Edit</a>
