--- a/frontend/src/app/graphs/classroom/classroom.component.html
+++ b/frontend/src/app/graphs/classroom/classroom.component.html
@@ -1,7 +1,7 @@
 <app-admin-nav></app-admin-nav>
 <br>
 <div style="text-align:center">
-    <strong > Graph showing NPS for the overall effectiveness of lab Equipments </strong>
+    <strong > Graph showing NPS  rate for the classroom facilities offered by the school</strong>
 </div>
 <br>
 <div class="margin">
@@ -9,7 +9,7 @@
         <canvas id="canvas">{{chart}}</canvas>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12" >
-        <a class="pull-left" routerLink="../school">Previous</a>
-        <a class="pull-right" routerLink="../classroom">Lecture Halls</a>
+        <a class="pull-left" routerLink="../lab">Previous</a>
+        <a class="pull-right" routerLink="../conclusion">Recomendations</a>
       </div>
 </div>
