--- a/frontend/src/app/graphs/school/school.component.html
+++ b/frontend/src/app/graphs/school/school.component.html
@@ -8,4 +8,7 @@
     <div class="center" *ngIf="chart">
         <canvas id="canvas">{{chart}}</canvas>
       </div>
-    </div>
+      <div class="col-xs-12 col-sm-12 col-md-12" >
+        <a type="button" class="pull-right" routerLink="../lab">Labaratory>></a>
+      </div>
+</div>
