--- a/frontend/src/app/welcome/welcome.component.html
+++ b/frontend/src/app/welcome/welcome.component.html
@@ -7,15 +7,18 @@
       </h4>
       <br><br>
       <br><br>
-      <hr>
-      <div class="row center">
-      <div class="col-xs-3 col-xs-offset-0 col-sm-3 col-sm-offset-0 col-md-2 col-md-offset-0" >
-          <button type="button"  class="btn  button pull-left" (click)="onCancel()">Cancel survey</button>
+      <div class="footer">
+        <div class="row center">
+          <div class="col-xs-3 col-xs-offset-0 col-sm-3 col-sm-offset-0 col-md-2 col-md-offset-0" >
+              <button type="button"  class="btn  button pull-left" (click)="onCancel()">Cancel survey</button>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-8" >
+          <button type="button"  class="btn  button pull-right" (click)="onStart()">Start survey</button>
+          </div>
+    
+        </div>
       </div>
-      <div class="col-xs-9 col-sm-9 col-md-10" >
-      <button type="button"  class="btn  button pull-right" (click)="onStart()">Start survey</button>
-      </div>
-    </div>
+
     </div>
     </div>
   </div>
