--- a/frontend/src/app/administrator/admin-department/admin-department.component.html
+++ b/frontend/src/app/administrator/admin-department/admin-department.component.html
@@ -1,26 +1,5 @@
 <app-admin-nav></app-admin-nav>
 <div class="container">
-  <div style="color: green" *ngIf="showAlert">Department Added Successfully</div>
-  <br>
-  <form class="form-inline" (ngSubmit)="addDepartment()" #addform="ngForm">
-    <div class="form-group">
-      <label class="sr-only">Department Id</label>
-      <input type="text" class="form-control" name="departmentId" [(ngModel)]="model.departmentId" required #departmentId="ngModel"
-        placeholder="Enter Department Id" #departmentId>
-    </div>
-
-    <div class="form-group">
-      <label class="sr-only">Department Name</label>
-      <input type="text" class="form-control" name="departmentName" [(ngModel)]="model.departmentName" required #departmentName="ngModel"
-        placeholder="Enter Department Name" #departmentName>
-    </div>
-    <button type="submit" class="btn btn-success" [disabled]="!addform.form.valid">Add Department</button>
-  </form>
-  <br>
-  <br>
-</div>
-<hr>
-<div class="container">
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
@@ -47,4 +26,25 @@
         </tr>
       </tbody>
     </table>
+    </div>
+
+    <div class="container">
+      <div style="color: green" *ngIf="showAlert">Department Added Successfully</div>
+      <br>
+      <form class="form-inline" (ngSubmit)="addDepartment()" #addform="ngForm">
+        <div class="form-group">
+          <label class="sr-only">Department Id</label>
+          <input type="text" class="form-control" name="departmentId" [(ngModel)]="model.departmentId" required #departmentId="ngModel"
+            placeholder="Enter Department Id" #departmentId>
+        </div>
+    
+        <div class="form-group">
+          <label class="sr-only">Department Name</label>
+          <input type="text" class="form-control" name="departmentName" [(ngModel)]="model.departmentName" required #departmentName="ngModel"
+            placeholder="Enter Department Name" #departmentName>
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="!addform.form.valid">Add Department</button>
+      </form>
+      <br>
+      <br>
     </div>
