--- a/frontend/src/app/administrator/admin-login/admin-login.component.html
+++ b/frontend/src/app/administrator/admin-login/admin-login.component.html
@@ -17,7 +17,7 @@
                  placeholder="Password"/>
         </div>
         <div class="login-buttons pull-right">
-          <button class="btn btn-success btn-lg" type="submit">Log In</button>
+          <button class="btn btn-primary btn-lg" type="submit">Log In</button>
         </div>
         <div class="clear"></div>
       </form>
