--- a/frontend/src/app/administrator/admin-program/admin-program.component.html
+++ b/frontend/src/app/administrator/admin-program/admin-program.component.html
@@ -1,5 +1,33 @@
 <app-admin-nav></app-admin-nav>
 <div class="container">
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>program Name</th>
+          <th>Action</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let program of programs">
+          <td>{{program.programId}}</td>
+          <td>{{program.programName}}</td>
+          <td>
+            <a routerLink="/units" style="color:blue;">Edit</a>
+          </td>
+          <td>
+            <a (click)='deleteprogram(program.programId)' type="button" style="color: red" aria-label="Left Align">
+   
+              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+               
+            </a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+<div class="container">
     <div style="color: green" *ngIf="showAlert">Program Added Successfully</div>
     <br>
     <form class="form-inline" (ngSubmit)="addProgram()" #addform="ngForm">
@@ -13,7 +41,7 @@
         <input type="text" class="form-control" name="programName" [(ngModel)]="model.programName" required #programName="ngModel"
           placeholder="Enter Program Name" #ProgramName>
       </div>
-      <button type="submit" class="btn btn-success" [disabled]="!addform.form.valid">Add Program</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!addform.form.valid">Add Program</button>
     </form>
     <br>
     <br>
