--- a/frontend/src/app/administrator/admin-unit/admin-unit.component.css
+++ b/frontend/src/app/administrator/admin-unit/admin-unit.component.css
@@ -2,7 +2,7 @@
     box-shadow: 0 0 2px grey;
 } */
 button {
-    background-color:#4ca973;
+    /* background-color:#4ca973; */
     color: #ffffff;
     font-family: 'Trocchi', serif;
      font-size: 15px;
