--- a/frontend/src/app/graphs/classroom/classroom.component.html
+++ b/frontend/src/app/graphs/classroom/classroom.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12" >
         <a class="pull-left" routerLink="../lab">Previous</a>
-        <a class="pull-right" routerLink="../conclusion">Recomendations</a>
+        <a class="pull-right" routerLink="../units">Units</a>
       </div>
       <br><br>
       
