--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -6,13 +6,16 @@
       [attr.role]="isHandset ? 'dialog' : 'navigation'"
       [mode]="(isHandset | async)!.matches ? 'over' : 'side'"
       [opened]="!(isHandset | async)!.matches">
-      <mat-toolbar color="primary"><b>MASENO NPS</b></mat-toolbar>
+      <mat-toolbar color="primary">MASENO NPS</mat-toolbar>
       <mat-nav-list>
-        <a mat-list-item routerLink="/register-patient">
-          Add Patient</a><br><br>
+        <a mat-list-item routerLink="/about">
+          <mat-icon>all_out</mat-icon>
+         User Guide</a><br><br>
         <a mat-list-item routerLink="/school">
+          <mat-icon>view_list</mat-icon>
           View  Reports</a><br><br>
         <a mat-list-item (click)="onLogout()">
+           <mat-icon>exit_to_app</mat-icon>
           Logout</a>
       </mat-nav-list>
     </mat-sidenav>
