--- a/frontend/src/app/graphs/school/school.component.html
+++ b/frontend/src/app/graphs/school/school.component.html
@@ -1,7 +1,8 @@
-<app-admin-nav></app-admin-nav>
+<app-admin-nav>
 <br>
-<div style="text-align:center">
-    <strong >Graph showing how likely student would recommend School of Computing to a friend or colleague</strong>
+<div class="container">
+<div class="jumbotron" style="text-align:center">
+    <strong>Graph showing how likely student would recommend School of Computing to a friend or colleague</strong>
 </div>
 <br>
 <div class="margin">
@@ -12,3 +13,5 @@
         <a type="button" class="pull-right" routerLink="../lab">Labaratory>></a>
       </div>
 </div>
+</div>
+</app-admin-nav>
