--- a/frontend/src/app/questionnaire/questionnaire.component.html
+++ b/frontend/src/app/questionnaire/questionnaire.component.html
@@ -1,6 +1,5 @@
-<app-navbar>
+<app-navbar></app-navbar>
 <survey 
     [json]="json"
     (onCompleteClicked)="onSurveyDone($event)">
 </survey>
-</app-navbar>
