--- a/frontend/src/app/administrator/admin-department/admin-department.component.html
+++ b/frontend/src/app/administrator/admin-department/admin-department.component.html
@@ -1,50 +1,30 @@
-<app-admin-nav></app-admin-nav>
-<div class="container">
-    <table class="table table-striped table-bordered">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Department Name</th>
-          <th>Action</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let department of departments">
-          <td>{{department.departmentId}}</td>
-          <td>{{department.departmentName}}</td>
-          <td>
-            <a routerLink="/units" style="color:blue;">Edit</a>
-          </td>
-          <td>
-            <a (click)='deleteDepartment(department.departmentId)' type="button" style="color: red" aria-label="Left Align">
-   
-              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-               
-            </a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    </div>
-
+<app-admin-nav>
     <div class="container">
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-6">
       <div style="color: green" *ngIf="showAlert">Department Added Successfully</div>
       <br>
-      <form class="form-inline" (ngSubmit)="addDepartment()" #addform="ngForm">
+      <form class="form" (ngSubmit)="addDepartment()" #addform="ngForm">
         <div class="form-group">
           <label class="sr-only">Department Id</label>
           <input type="text" class="form-control" name="departmentId" [(ngModel)]="model.departmentId" required #departmentId="ngModel"
             placeholder="Enter Department Id" #departmentId>
         </div>
-    
+        <br>
         <div class="form-group">
           <label class="sr-only">Department Name</label>
           <input type="text" class="form-control" name="departmentName" [(ngModel)]="model.departmentName" required #departmentName="ngModel"
             placeholder="Enter Department Name" #departmentName>
         </div>
         <button type="submit" class="btn btn-primary" [disabled]="!addform.form.valid">Add Department</button>
+        <br>
+        <a routerLink="../listDepartments" class="pull-right">View</a>
       </form>
       <br>
       <br>
+      </div>
+      <div class="col-md-2"></div>
+      </div>
     </div>
+  </app-admin-nav>
