--- a/frontend/src/app/administrator/admin-nav/admin-nav.component.html
+++ b/frontend/src/app/administrator/admin-nav/admin-nav.component.html
@@ -1,32 +1,45 @@
-<mat-toolbar color="primary">
-    <span class="fill-remaining-space">
-      <button mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <mat-menu #menu="matMenu" [overlapTrigger]="false">
-          <a routerLink="/school" mat-menu-item>
-            <mat-icon>view_list</mat-icon>
-            <span>View Reports</span>
-          </a>
+<mat-sidenav-container id="sidenav-container" *ngIf="showNavbar">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport="true" [attr.role]="isHandset ? 'dialog' : 'navigation'" [mode]="(isHandset | async)!.matches ? 'over' : 'side'"
+    [opened]="!(isHandset | async)!.matches">
+    <mat-toolbar color="primary">Staff Panel</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item routerLink="/school">
+        <mat-icon>view_list</mat-icon>
+        View reports</a>
+      <br>
+      <a mat-list-item routerLink="/admindepartment">
+        <mat-icon>view_list</mat-icon>
+        Edit departments</a>
+      <br>
+      <a mat-list-item routerLink="/adminProgram">
+        <mat-icon>view_list</mat-icon>
+        Edit Programs</a>
+      <br>
+      <a mat-list-item routerLink="/adminUnit">
+        <mat-icon>view_list</mat-icon>
+        Edit units</a>
+      <br>
+      <a mat-list-item routerLink="/department">
+        <mat-icon>exit_to_app</mat-icon>
+        Student Panel</a>
+      <br>
 
-        <a routerLink="/admindepartment" mat-menu-item>
-          <mat-icon>create</mat-icon>
-          <span>Department</span>
-        </a>
-        <a routerLink="/adminProgram" mat-menu-item>
-            <mat-icon>add_circle</mat-icon>
-            <span>Programs</span>
-          </a>
-          <a routerLink="/adminUnit" mat-menu-item>
-              <mat-icon>list_alt</mat-icon>
-              <span>Unit</span>
-            </a>
-        <button mat-menu-item (click)="onLogout()">
-          <mat-icon>exit_to_app</mat-icon>
-          <span>Logout</span>
-        </button>
-      </mat-menu>
-    </span>
-    <span class="fill-remaining-space">Computing and Informatics NPS</span>
-  </mat-toolbar>
-  <br><br><br>
+      <a mat-list-item (click)="onLogout()">
+        <mat-icon>exit_to_app</mat-icon>
+        Logout</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="(isHandset | async)!.matches">
+        <mat-icon aria-label="Side nav toggle icon" style="color: white">menu</mat-icon>
+      </button>
+      <span style="color: white">
+        <h3></h3>
+      </span>
+    </mat-toolbar>
+    <br>
+    <br>
+    <ng-content></ng-content>
+  </mat-sidenav-content>
+</mat-sidenav-container>
