--- a/frontend/src/app/administrator/admin-unit/admin-unit.component.html
+++ b/frontend/src/app/administrator/admin-unit/admin-unit.component.html
@@ -1,48 +1,62 @@
-<app-admin-nav></app-admin-nav>
+<app-admin-nav>
 <div class="container">
-  <table class="table table-striped table-bordered">
-    <thead>
-      <tr>
-        <th>Unit Code</th>
-        <th>Unit Name</th>
-        <th>Action</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let unit of units">
-        <td>{{unit.unitCode}}</td>
-        <td>{{unit.unitName}}</td>
-        <td>
-          <a routerLink="/units" style="color:blue;">Edit</a>
-        </td>
-        <td>
-          <a (click)='deleteUnit(unit.unitCode)' type="button" style="color: red" aria-label="Left Align">
- 
-            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-             
-          </a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  </div>
-<div class="container">
-    <div style="color: green" *ngIf="showAlert">Program Added Successfully</div>
-    <br>
-    <form class="form-inline" (ngSubmit)="addUnit()" #addform="ngForm">
-      <div class="form-group">
-        <label class="sr-only">Unit Code</label>
-        <input type="text" class="form-control" name="unitCode" [(ngModel)]="model.unitCode" required #unitName="ngModel" placeholder="Enter Unit code"
-          #unitCode>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-6">
+        <div style="color: green" *ngIf="showAlert">Unit Added Successfully</div>
+        <br>
+        <form class="" (ngSubmit)="addUnit()" #addform="ngForm">
+          <div class="form_group">
+            <label>Department</label>
+            <select class="form-control" id="department" [(ngModel)]="model.department" name="department" required>
+              <option *ngFor="let department of departments" [value]="department.departmentId">{{department.departmentName}}</option>
+            </select>
+          </div>
+          <br>
+          <div class="form_group">
+            <label>Program</label>
+            <select class="form-control" id="Program" [(ngModel)]="model.program" name="program" required>
+              <option *ngFor="let program of programs" [value]="program.programId">{{program.programName}}</option>
+            </select>
+          </div>
+          <br>
+          <div class="form_group">
+            <label>Year</label>
+            <select class="form-control" id="year" [(ngModel)]="model.year" name="year" required>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+            </select>
+          </div>
+          <br>
+          <div class="form_group">
+            <label>Semester</label>
+            <select class="form-control" id="semester" [(ngModel)]="model.semester" name="semester" required>
+              <option>1</option>
+              <option>2</option>>
+            </select>
+          </div>
+          <br>
+          <div class="form-group">
+            <label class="">Unit Code</label>
+            <input type="text" class="form-control" name="unitCode" [(ngModel)]="model.unitCode" required #unitName="ngModel" placeholder="Enter Unit code"
+              #unitCode>
+          </div>
+          <br>
+          <div class="form-group">
+            <label class="">Unit Name</label>
+            <input type="text" class="form-control" name="unitName" [(ngModel)]="model.unitName" required #unitName="ngModel" placeholder="Enter Unit Name"
+              #unitName>
+          </div>
+          <button type="submit" class="btn btn-primary" [disabled]="!addform.form.valid">Add Unit</button>
+          <br>
+          <a routerLink="../listUnits" class="pull-right">View</a>
+        </form>
+        <br>
+        <br>
       </div>
-      <div class="form-group">
-        <label class="sr-only">Unit Name</label>
-        <input type="text" class="form-control" name="unitName" [(ngModel)]="model.unitName" required #unitName="ngModel" placeholder="Enter Unit Name"
-          #unitName>
-      </div>
-      <button type="submit" class="btn btn-primary" [disabled]="!addform.form.valid">Add Unit</button>
-    </form>
-    <br>
-    <br>
+    </div>
   </div>
+  <div class="col-md-2"></div>
+</app-admin-nav>
