--- a/frontend/src/app/graphs/classroom/classroom.component.html
+++ b/frontend/src/app/graphs/classroom/classroom.component.html
@@ -1,8 +1,11 @@
-<app-admin-nav></app-admin-nav>
+<app-admin-nav>
 <br>
 <br>
+<div class="container">
+<div class="jumbotron" style="text-align: center">
+  <strong> Graph showing NPS  rate for the classroom facilities offered by the school</strong>
+</div>
 <div class="margin">
-   <strong > Graph showing NPS  rate for the classroom facilities offered by the school</strong>
    <br>
     <div class="center" *ngIf="chart">
         <canvas id="canvas">{{chart}}</canvas>
@@ -11,10 +14,12 @@
         <a class="pull-left" routerLink="../lab">Previous</a>
         <a class="pull-right" routerLink="../units">Units</a>
       </div>
-      <br><br>
-      
-      <strong>Students Observations</strong>
-      <div class="center" *ngFor="let comment of comments">
-          <li>{{comment}}</li>
-      </div>
 </div>
+<div class="jumbotron" style="text-align: center">
+  <strong>Students Observations</strong>
+</div>
+<div class="center" *ngFor="let comment of comments">
+    <li>{{comment}}</li>
+</div>
+</div>
+</app-admin-nav>
