--- a/frontend/src/app/graphs/lab/lab.component.css
+++ b/frontend/src/app/graphs/lab/lab.component.css
@@ -1,6 +1,18 @@
 .margin{
     margin-left: 25%;
     margin-right: 25%;
-    margin-bottom: 25%;
+    margin-bottom: 10%;
     margin-top: 10px;
 }
+strong { color: #000000;
+    font-family: 'Trocchi', serif;
+    font-size: 20px;
+    font-style: bold;
+    font-weight: 45px;
+    line-height: 38px; margin: 0; }
+h3  { color: #000000;
+     font-family: 'Trocchi', serif;
+     font-size: 20px;
+     font-style: bold;
+     font-weight: normal;
+     line-height: 38px; margin: 0; }
