--- a/frontend/src/app/graphs/units/units.component.css
+++ b/frontend/src/app/graphs/units/units.component.css
@@ -4,3 +4,20 @@
     margin-bottom: 25%;
     margin-top: 10px;
 }
+li { color: #000000;
+    font-family: 'Trocchi', serif;
+     font-size: 15px;
+    font-weight: normal;
+    line-height: 38px; margin: 0; }
+
+    strong { color: #ffffff;
+        font-family: 'Trocchi', serif;
+         font-size: 20px;
+        font-weight: 45px;
+        line-height: 38px; margin: 0; }
+
+        h3 { color: #000000;
+            font-family: 'Trocchi', serif;
+             font-size: 25px;
+            font-weight: normal;
+            line-height: 38px; margin: 0; }
