--- a/frontend/src/app/year/year.component.html
+++ b/frontend/src/app/year/year.component.html
@@ -1,4 +1,4 @@
-<app-navbar>
+<app-navbar></app-navbar>
 <div class="container">
   <div class="row">
     <div class="input-group" style="margin-left: 1em">      
@@ -15,4 +15,3 @@
     </div>
   </div>
 </div>
-</app-navbar>
