--- a/frontend/src/app/welcome/welcome.component.html
+++ b/frontend/src/app/welcome/welcome.component.html
@@ -2,8 +2,8 @@
 <div class="container">
     <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12" >
-      <h3>WELCOME</h3>
-      <h4>With this Survey we want to find out how you and your classmates think about Services Offered by this school. Click <b>Start Survey</b> to give us your feedback
+      <h3 *ngIf="unit"><b>SURVEY FOR {{unit}}</b></h3>
+      <h4>With this Survey we want to find out how you and your classmates think about Services Offered by this school. Click <b style="color:#607D8B">Start Survey</b> to give us your feedback
       </h4>
       <br><br>
       <br><br>
