--- a/frontend/src/app/success/success.component.css
+++ b/frontend/src/app/success/success.component.css
@@ -13,12 +13,19 @@ h3 {
   margin-top: 0;
   text-align: left;
 }
-h4 {
-  font-size: 1.2em;
-  color: #999;
-  margin-left: 0;
-  text-align:left; 
-}
+
+h3  { color: #000000;
+  font-family: 'Trocchi', serif;
+  font-size: 15px;
+  font-style: bold;
+  font-weight: normal;
+  line-height: 38px; margin: 0; }
+h4  { color: #000000;
+  font-family: 'Trocchi', serif;
+  font-size: 15px;
+  font-style: bold;
+  font-weight: normal;
+  line-height: 38px; margin: 0; }
 h2 {
   font-size: 2em;
   margin-top: 0;
