--- a/frontend/src/app/welcome/welcome.component.css
+++ b/frontend/src/app/welcome/welcome.component.css
@@ -18,18 +18,26 @@ h1 {
   margin-bottom: 0;
 }
 
-h3 {
+/* h3 {
   font-size: 1.7em;
   color: #607D8B;
   margin-top: 0;
   text-align:left; 
-}
+} */
 
-  h4 {
-  font-size: 1.2em;
-  color: #999;
-  margin-left: 0;
-  }
+h3  { color: #607D8B;
+  font-family: 'Trocchi', serif;
+  font-size: 15px;
+  font-style: bold;
+  font-weight: normal;
+  line-height: 38px; margin: 0; }
+
+h4  { color: #000000;
+  font-family: 'Trocchi', serif;
+  font-size: 15px;
+  font-style: bold;
+  font-weight: normal;
+  line-height: 38px; margin: 0; }
 h2 {
   font-size: 2em;
   margin-top: 0;
